--- a/style.css
+++ b/style.css
@@ -2,9 +2,242 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
 body{
-    background-color: black;
-    color: white;
+    height: 100vh;
+    width: 100vw;
 }
+
+/* this is the main container */
+
+.container{
+    height: 100vh;
+    width: 100vw;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    gap: 0.75rem;
+    align-items: center;
+    padding: 0.625rem;
+}
+
+/* this is the left section */
+
+.left{
+    width: 25vw;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    gap: 0.75rem;
+}
+
+/* this is the left-home section */
+
+.home{
+    background-color: #121212;
+    font-size: 1.25rem;
+    color: white;
+    width: 100%;
+    padding: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: start;
+    border-radius: 0.5rem;
+    height: 25%;
+}
+
+.logo{
+    width: 100%;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.logo > img{
+    height: 2rem;
+    margin-bottom: 0.75rem;
+}
+
+.invert{
+    filter: invert(1);
+}
+
+.home-links{
+    height: 2rem;
+    margin: 0.75rem 0;
+}
+
+.home > span{
+    width: 100%;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 1rem;
+    font-weight: bold;
+}
+
+/* this is the left-library section */
+
+.library{
+    width: 100%;
+    height: 75%;
+    background-color: #121212;
+    color: #9F9F9F;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    gap: 2rem;
+    align-items: center;
+    border-radius: 0.5rem;
+}
+
+.library-header{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.title{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 0.75rem;
+}
+
+.title:hover{
+    color: white;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.title img{
+    height: 2rem;
+    fill: #9F9F9F;
+}
+
+.add-button{
+    height: 48px;
+    width: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.add-button i{
+    font-size: 1.25rem;
+    
+}
+
+.add-button:hover{
+    color: white;
+    border-radius: 50%;
+    border: none;
+    background-color: #242424;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.library-desc{
+    width: 100%;
+    background-color: #242424;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    color: white;
+    font-weight: 800;
+    border-top-left-radius: 0.75rem;
+    border-top-right-radius: 0.75rem;
+    padding: 1rem;
+    font-size: 0.9rem;
+}
+
+.library-footer{
+    padding: 0.75rem;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    gap: 1rem;
+    width: 100%;
+}
+
+.lib-footer-links{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.cookies{
+    font-weight: 800;
+    font-size: 1.1rem;
+}
+
+.cookies:hover{
+    border-bottom: 2px solid #9F9F9F;
+    cursor: pointer;
+}
+
+.language{
+    margin-top: 1.5rem;
+    width: auto;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 0.5rem;
+    font-size: 1.25rem;
+    font-weight: 700;
+    color: white;
+    padding: 0.75rem 1rem;
+    border: 1px solid #9F9F9F;
+    border-radius: 2rem;
+}
+
+.language:hover{
+    transition: 0.1s;
+    border: 2px solid white;
+    cursor: pointer;
+}
+
+
+/* this is the right section */
+
+.right{
+    width: 75vw;
+    height: 100%;
+    background-color: #121212;
+    border-radius: 0.5rem;
+}
+
+@media screen and (max-width: 1000px) {
+    .left{
+        width: 30vw;
+    }
+
+    .right{
+        width: 70vw;
+    }
+}
+
+@media screen and (max-width: 885px) {
+    .left{
+        display: none;
+    }
+
+    .right{
+        width: 100vw;
+    }
+}
+
+
+
+
+
+
