--- a/style.css
+++ b/style.css
@@ -6,15 +6,15 @@
 }
 
 body{
-    height: 100vh;
-    width: 100vw;
+    width: 100%;
+    height: auto;
 }
 
 /* this is the main container */
 
 .container{
-    height: 100vh;
-    width: 100vw;
+    height: auto;
+    width: 100%;
     background-color: black;
     display: flex;
     justify-content: center;
@@ -26,7 +26,7 @@ body{
 /* this is the left section */
 
 .left{
-    width: 25vw;
+    width: 24vw;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -85,7 +85,7 @@ body{
 
 .library{
     width: 100%;
-    height: 75%;
+    height: auto;
     background-color: #121212;
     color: #9F9F9F;
     padding: 1rem;
@@ -148,14 +148,35 @@ body{
     width: 100%;
     background-color: #242424;
     display: flex;
+    flex-direction: column;
     justify-content: start;
-    align-items: center;
+    gap: 1rem;
+    align-items: start;
     color: white;
     font-weight: 800;
-    border-top-left-radius: 0.75rem;
-    border-top-right-radius: 0.75rem;
+    border-radius: 0.75rem;
     padding: 1rem;
     font-size: 0.9rem;
+}
+
+.library-desc h4{
+    font-weight: 400;
+    font-size: 1.1rem;
+}
+
+.btn{
+    color: black;
+    background-color: white;
+    border-radius: 2rem;
+    width: auto;
+    padding: 0.75rem 1.2rem;
+    font-weight: 800;
+    font-size: 1.1rem;
+}
+
+.btn:hover{
+    transition: 0.3s;
+    cursor: pointer;
 }
 
 .library-footer{
@@ -210,15 +231,96 @@ body{
 /* this is the right section */
 
 .right{
-    width: 75vw;
+    width: 73vw;
     height: 100%;
-    background-color: #121212;
+    background: linear-gradient(180deg, #212121, #121212);
     border-radius: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.25rem;
 }
 
-@media screen and (max-width: 1000px) {
+.top-nav{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.left-top-nav{
+    height: 100%;
+    width: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+}
+
+.prev, .next{
+    height: 45px;
+    width: 45px;
+    background-color: #121212;
+    color: #9F9F9F;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-size: 20px;
+}
+
+.right-top-nav{
+    height: 100%;
+    width: auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 0.75rem;
+}
+
+#app-install{
+    border: none;
+    display: flex;
+    gap: 8px;
+    align-items: center;
+}
+
+#app-install i{
+    font-size: 24px;
+}
+
+#notifications, #user-profile{
+    border: none;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#user-profile{
+    background-color: #7D4B32;
+    color: black;
+}
+
+/* this is the music player */
+
+.bottom{
+    width: 100%;
+    height: 100px;
+    background-color: black;
+    overflow: hidden;
+    position: fixed;
+    z-index: 1;
+    bottom: 0;
+}
+
+@media screen and (max-width: 1090px) {
     .left{
-        width: 30vw;
+        width: 35vw;
     }
 
     .right{
@@ -227,12 +329,21 @@ body{
 }
 
 @media screen and (max-width: 885px) {
+    body{
+        height: 100vh;
+    }
+
+    .container{
+        height: 100%;
+    }
+
     .left{
         display: none;
     }
 
     .right{
         width: 100vw;
+        height: 100%;
     }
 }
 
